fix(addon-table): `Th` allow aligning to the right when sortable

--- a/projects/addon-table/components/table/th/th.style.less
+++ b/projects/addon-table/components/table/th/th.style.less
@@ -116,7 +116,7 @@
     .transition(color);
     .button-clear();
 
-    display: flex;
+    display: inline-flex;
     flex-direction: inherit;
     align-items: center;
     outline: none;
